DMARL_SAC/results/seeds_20251230_041756/seed_123/training.log
Traceback (most recent call last):
  File "/home/dongmingwang/project/DMARL_COMM/DMARL_SAC/main.py", line 32, in <module>
    from trainer import Trainer
  File "/home/dongmingwang/project/DMARL_COMM/DMARL_SAC/trainer.py", line 25, in <module>
    from sac import SACSystem
  File "/home/dongmingwang/project/DMARL_COMM/DMARL_SAC/sac.py", line 24, in <module>
    from agent import SACAgent
  File "/home/dongmingwang/project/DMARL_COMM/DMARL_SAC/agent.py", line 170
    action = self.actor.get_action(
    ^^^^^^
IndentationError: expected an indented block after 'else' statement on line 168
